# PyTransport3.0

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  PyTransportSetup.py  README.md  activate.sh  mkdocs.yml  moduleSetup.py  pyproject.toml  requirements.txt  setup.cfg
PyTransport/: MANIFEST.in  setup.cfg  setup.py
PyTransport/Examples/: Lspectra_Braglia1.py  plot.py
PyTransport/Examples/Braglia/: LNCcmb.py  Lsetup.py  NBplots.py  TestNB.py  example.py
PyTransport/Examples/Braglia/Cluster/: jsub.sh
PyTransport/Examples/Braglia/Data/: NBTotal.csv
PyTransport/Examples/DQuad/: DQcmb.py  DQsetup.py  DQspectra.py  NBplots.py  Spectra_plots.py  ethan.py
PyTransport/Examples/DQuad/Data/: DQspectra.csv  NB_MPP.csv  NB_PyT.csv  NBnewtot.txt  NBtotal.csv  NBtotal.txt  cmbdata.txt
PyTransport/Examples/Dibya/: Lsetup.py  example.py
PyTransport/Examples/Monodromy/quadratic/: AMQuadSetup.py  example.py  new.py  spectra.py  srtest.py
PyTransport/Examples/Non-canonical/: Lsetup.py  Lspectra.py  Lspectra_Braglia1.py  NBplots.py  Spectra_plots.py  comb.py
PyTransport/Examples/Non-canonical/Data/: LNCspectra.csv  NBTotal.csv
PyTransport/Examples/OtherModel/: Lsetup.py  example.py
PyTransport/Examples/PBH/: PBHSetup.py  Plots.py
PyTransport/Examples/PBH/Cluster/: combine.py  jsub.sh  test.py
PyTransport/Examples/QAxion/: AxQsetup.py  NBplots.py  QAcmb.py  QAspectra.py  Spectra_plots.py
PyTransport/Examples/SingleField/: NBplots.py  SFcmb.py  SFsetup.py  SFspectra.py  Spectra_plots.py
PyTransport/Examples/Squeezed/: MSetup.py  MSq.py  Maldacena.py  NBtest.py  Plot.py  plotdata.py
PyTransport/Examples/TestModel/: example.py  xModelSetup.py
PyTransport/Examples/dafne/: dafnesetup.py  script.py  setup_template.py  sr.py
PyTransport/PyTransCpp/: PyTrans.cpp
PyTransport/PyTransCpp/cppsrc/: evolve.h  fieldmetric.h  fieldmetricProto.h  model.h  moments.h  potential.h  potentialProto.h
PyTransport/PyTransPy/: PyTransScripts.py  PyTransSetup.py  moduleSetup.py
docs/: Doxyfile  api_reference.rst  (+5 more)
(+13180 files in other folders)
