[metadata]
name = PyTransport
version = 3.0.0
author = A. Costantini, D. Mulryne, J. Ronayne
description = A package to compute inflationary correlators for Multi-field models.
long_description = file: README.md
long_description_content_type = text/markdown
# license = MIT
url = https://github.com/yourname/my_project

[options]

packages = find:
python_requires = >=3.8
