[metadata]
name = PyTransport                                              # name
version = 1.0.0
author = Your Name                                              # author
description = A PyTransport module
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/yourname/my_project

[options]
python_requires = >=3.7